k8s/aws/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: newevent-ingress
  namespace: newevent
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - app.amashacloud.freedev.app
        - performance.metrices.amashacloud.freedev.app
        - web.analytics.amashacloud.freedev.app
      secretName: newevent-tls
  rules:
    - host: app.amashacloud.freedev.app
      http:
        paths:
          - path: /api/v1/event
            pathType: Prefix
            backend:
              service:
                name: event-service
                port:
                  number: 5001
          - path: /api/v1/program
            pathType: Prefix
            backend:
              service:
                name: program-service
                port:
                  number: 5002
          - path: /api/v1/registration
            pathType: Prefix
            backend:
              service:
                name: registration-service
                port:
                  number: 5003
          - path: /api/v1/auth
            pathType: Prefix
            backend:
              service:
                name: auth-service
                port:
                  number: 5006
          - path: /api/v1/collect
            pathType: Prefix
            backend:
              service:
                name: analytics-service
                port:
                  number: 5005
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 80
    - host: performance.metrices.amashacloud.freedev.app
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: grafana
                port:
                  number: 3000
    - host: web.analytics.amashacloud.freedev.app
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: superset
                port:
                  number: 8088
